fix: remove broken submodule copilot-api

--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -1,31 +1,41 @@
 name: Analyze PR with Ollama
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+pull_request:
+types: [opened, synchronize]
 
 jobs:
-  analyze-diff:
-    runs-on: ubuntu-latest
+analyze:
+runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+steps:
+  - name: 🧾 Checkout repo
+    uses: actions/checkout@v3
 
-      - name: Get PR Diff
-        run: |
-          gh pr diff "$PR_NUMBER" > pr.diff
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
+  - name: 🛠 Set up Python
+    uses: actions/setup-python@v4
+    with:
+      python-version: '3.10'
 
-      - name: Send Diff to Ollama API
-        run: |
-          curl -X POST https://5b87-182-74-161-50.ngrok-free.app/analyze \
-            -H "Content-Type: application/json" \
-            -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\n/\\n/g' pr.diff | sed 's/\"/\\"/g')\"}" \
-            > response.json
+  - name: 📦 Install dependencies
+    run: pip install -r requirements.txt
 
-      - name: Show Ollama Response
-        run: cat response.json
+  - name: 📤 Generate PR Diff
+    run: |
+      git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
+      git fetch origin ${{ github.event.pull_request.head.ref }} --depth=1
+      git diff origin/${{ github.event.pull_request.base.ref }}...origin/${{ github.event.pull_request.head.ref }} > pr.diff
+
+  - name: 🤖 Send Diff to Ollama API
+    run: |
+      curl -X POST https://5b87-182-74-161-50.ngrok-free.app/analyze \
+        -H "Content-Type: application/json" \
+        -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\\n/\\\\n/g' pr.diff | sed 's/\"/\\\\\"/g')\"}" \
+        > response.json
+
+  - name: 🔁 Add Ollama AI Response to PR as Comment
+    run: bash scripts/comment-pr.sh
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_EVENT_PATH: ${{ github.event_path }}
 
