fix: ensure full git history for proper diff

--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -27,9 +27,9 @@ jobs:
 
       - name: 📤 Generate PR Diff
         run: |
-          git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
-          git fetch origin ${{ github.event.pull_request.head.ref }} --depth=1
-          git diff origin/${{ github.event.pull_request.base.ref }}...origin/${{ github.event.pull_request.head.ref }} > pr.diff
+         git fetch origin
+         git checkout ${{ github.event.pull_request.head.ref }}
+         git diff origin/${{ github.event.pull_request.base.ref }}...HEAD > pr.diff
 
       - name: 🤖 Send Diff to Ollama API
         run: |
