--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+permissions:
+  pull-requests: write
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
@@ -18,33 +21,24 @@ jobs:
           python-version: '3.10'
 
       - name: 📦 Install dependencies
-        run: |
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            echo "No requirements.txt found, skipping install"
-          fi
+        run: pip install -r requirements.txt
 
       - name: 📤 Generate PR Diff
         run: |
-         git fetch origin
-         git checkout ${{ github.event.pull_request.head.ref }}
-         git diff origin/${{ github.event.pull_request.base.ref }}...HEAD > pr.diff
+          git fetch origin
+          git checkout ${{ github.event.pull_request.head.ref }}
+          git diff origin/${{ github.event.pull_request.base.ref }}...HEAD > pr.diff
 
       - name: 🤖 Send Diff to Ollama API
         run: |
           ESCAPED_DIFF=$(sed ':a;N;$!ba;s/"/\\"/g;s/\n/\\n/g' pr.diff)
-          curl -X POST https://5b87-182-74-161-50.ngrok-free.app/analyze \
+          curl -X POST https://5b87-182-74-161-50.ngrok-free.app \
             -H "Content-Type: application/json" \
             -d "{\"diff\": \"$ESCAPED_DIFF\"}" \
             > response.json
 
-      - name: 🔁 Set PR URL in Environment
-        run: echo "PR_URL=${{ github.event.pull_request.html_url }}" >> $GITHUB_ENV
-
-      - name: 💬 Add Ollama AI Response to PR as Comment
+      - name: 🔁 Add Ollama AI Response to PR as Comment
         run: bash scripts/comment-pr.sh
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ env.PR_URL }}
 
