--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -1,45 +1,44 @@
-name: Analyze PR with Ollama
+name: Analyze Pull Request
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+pull_request:
+types: [opened, synchronize, reopened]
 
 jobs:
-  analyze:
-    runs-on: ubuntu-latest
+analyze:
+runs-on: ubuntu-latest
 
-    steps:
-      - name: 🧾 Checkout repo
-        uses: actions/checkout@v3
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  NGROK_URL: ${{ secrets.NGROK_URL }}
+  PR_URL: ${{ github.event.pull_request.html_url }}
 
-      - name: 🛠 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+steps:
+  - name: Checkout pull request branch
+    uses: actions/checkout@v3
+    with:
+      fetch-depth: 0
 
-      - name: 📦 Install dependencies
-        run: |
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  - name: Install dependencies
+    run: |
+      sudo apt-get update
+      sudo apt-get install -y jq curl
+      pip install -r requirements.txt
 
-      - name: 📤 Generate PR Diff
-        run: |
-          git fetch --unshallow || true
-          git fetch origin
-          git diff origin/${{ github.event.pull_request.base.ref }}...origin/${{ github.event.pull_request.head.ref }} > pr.diff
-          # git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
-          # git fetch origin ${{ github.event.pull_request.head.ref }} --depth=1
-          # git diff origin/${{ github.event.pull_request.base.ref }}...origin/${{ github.event.pull_request.head.ref }} > pr.diff
+  - name: Generate PR diff
+    run: |
+      git fetch origin main
+      git diff origin/main...HEAD > pr.diff
 
-      - name: 🤖 Send Diff to Ollama API
-        run: |
-          ESCAPED_DIFF=$(sed ':a;N;$!ba;s/"/\\"/g;s/\n/\\n/g' pr.diff)
-          curl -X POST https://5b87-182-74-161-50.ngrok-free.app \
-            -H "Content-Type: application/json" \
-            -d "{\"diff\": \"$ESCAPED_DIFF\"}" \
-            > response.json
+  - name: Call Flask API via ngrok
+    run: |
+      curl -X POST "$NGROK_URL/analyze" \
+        -H "Content-Type: application/json" \
+        -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\n/\\n/g' pr.diff | sed 's/\"/\\"/g')\"}" \
+        > response.json
 
-      - name: 🔁 Add Ollama AI Response to PR as Comment
-        run: bash scripts/comment-pr.sh
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_EVENT_PATH: ${{ github.event_path }}
+  - name: Comment on PR
+    run: |
+      analysis=$(jq -r '.analysis' response.json)
+      echo "$analysis" > comment.md
+      gh pr comment "$PR_URL" --body-file comment.md
