--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -1,44 +1,41 @@
 name: Analyze Pull Request
 
 on:
-pull_request:
-types: [opened, synchronize, reopened]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-analyze:
-runs-on: ubuntu-latest
+  analyze:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-env:
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  NGROK_URL: ${{ secrets.NGROK_URL }}
-  PR_URL: ${{ github.event.pull_request.html_url }}
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.10
 
-steps:
-  - name: Checkout pull request branch
-    uses: actions/checkout@v3
-    with:
-      fetch-depth: 0
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-  - name: Install dependencies
-    run: |
-      sudo apt-get update
-      sudo apt-get install -y jq curl
-      pip install -r requirements.txt
+      - name: Fetch PR diff
+        run: |
+          git fetch origin main --depth=1
+          git diff origin/main...HEAD > pr.diff
 
-  - name: Generate PR diff
-    run: |
-      git fetch origin main
-      git diff origin/main...HEAD > pr.diff
+      - name: Call Flask API via ngrok
+        run: |
+          curl -X POST "${{ secrets.NGROK_URL }}/analyze" \
+            -H "Content-Type: application/json" \
+            -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\n/\\n/g' pr.diff | sed 's/\"/\\"/g')\"}" \
+            > response.json
 
-  - name: Call Flask API via ngrok
-    run: |
-      curl -X POST "$NGROK_URL/analyze" \
-        -H "Content-Type: application/json" \
-        -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\n/\\n/g' pr.diff | sed 's/\"/\\"/g')\"}" \
-        > response.json
+      - name: Extract message and comment on PR
+        run: |
+          analysis=$(jq -r '.analysis' response.json)
+          echo "$analysis" > comment.md
+          gh pr comment "${{ github.event.pull_request.number }}" --body-file comment.md
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  - name: Comment on PR
-    run: |
-      analysis=$(jq -r '.analysis' response.json)
-      echo "$analysis" > comment.md
-      gh pr comment "$PR_URL" --body-file comment.md
