--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -1,12 +1,17 @@
-name: Analyze Pull Request
+name: Analyze PR with Ollama
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  analyze:
-    runs-on: ubuntu-latest
+  analyze-pr:
+    runs-on: ubuntu-22.04
+
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      NGROK_URL: ${{ secrets.NGROK_URL }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -14,28 +19,30 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Fetch PR diff
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Get PR diff
         run: |
           git fetch origin main --depth=1
           git diff origin/main...HEAD > pr.diff
 
       - name: Call Flask API via ngrok
         run: |
-          curl -X POST "${{ secrets.NGROK_URL }}/analyze" \
+          curl -X POST "$NGROK_URL/analyze" \
             -H "Content-Type: application/json" \
             -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\n/\\n/g' pr.diff | sed 's/\"/\\"/g')\"}" \
-            > response.json
+            -o response.json
 
-      - name: Extract message and comment on PR
+      - name: Extract analysis and comment on PR
         run: |
           analysis=$(jq -r '.analysis' response.json)
           echo "$analysis" > comment.md
-          gh pr comment "${{ github.event.pull_request.number }}" --body-file comment.md
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER=$(echo "${{ github.event.pull_request.number }}")
+          gh pr comment "$PR_NUMBER" --body-file comment.md
 
