--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -1,4 +1,4 @@
-name: Analyze PR with Ollama
+name: Analyze PR with AI
 
 on:
   pull_request:
@@ -7,39 +7,44 @@ on:
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      NGROK_URL: ${{ secrets.NGROK_URL }}
 
     steps:
-      - name: 🧾 Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
-      - name: 🛠 Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: 📦 Install dependencies
-        run: |
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: 📤 Generate PR Diff
-        run: |
-          git fetch --unshallow || true
-          git fetch origin
-          git diff origin/${{ github.event.pull_request.base.ref }}...origin/${{ github.event.pull_request.head.ref }} > pr.diff
-          # git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
-          # git fetch origin ${{ github.event.pull_request.head.ref }} --depth=1
-          # git diff origin/${{ github.event.pull_request.base.ref }}...origin/${{ github.event.pull_request.head.ref }} > pr.diff
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
 
-      - name: 🤖 Send Diff to Ollama API
+      - name: Get PR diff
         run: |
-          ESCAPED_DIFF=$(sed ':a;N;$!ba;s/"/\\"/g;s/\n/\\n/g' pr.diff)
-          curl -X POST https://5b87-182-74-161-50.ngrok-free.app \
+          git fetch origin main --depth=1
+          git diff origin/main...HEAD > pr.diff
+
+      - name: Call Flask API via ngrok
+        run: |
+          curl -X POST "$NGROK_URL/analyze" \
             -H "Content-Type: application/json" \
-            -d "{\"diff\": \"$ESCAPED_DIFF\"}" \
+            -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\n/\\n/g' pr.diff | sed 's/\"/\\"/g')\"}" \
             > response.json
 
-      - name: 🔁 Add Ollama AI Response to PR as Comment
-        run: bash scripts/comment-pr.sh
+      - name: Post comment to PR
+        run: |
+          analysis=$(jq -r '.analysis' response.json)
+          echo "$analysis" > comment.md
+          gh pr comment "$PR_NUMBER" --body-file comment.md
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_EVENT_PATH: ${{ github.event_path }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+
