--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -1,4 +1,4 @@
-name: Analyze PR with AI
+name: Analyze PR with Ollama
 
 on:
   pull_request:
@@ -13,38 +13,28 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
-
-      - name: Install Python dependencies
+      - name: Install requirements
         run: pip install -r requirements.txt
 
-      - name: Get PR diff
+      - name: Fetch PR diff
         run: |
-          git fetch origin main --depth=1
+          git fetch origin main
           git diff origin/main...HEAD > pr.diff
 
-      - name: Call Flask API via ngrok
+      - name: Call AI API
         run: |
           curl -X POST "$NGROK_URL/analyze" \
             -H "Content-Type: application/json" \
             -d "{\"diff\": \"$(sed ':a;N;$!ba;s/\n/\\n/g' pr.diff | sed 's/\"/\\"/g')\"}" \
             > response.json
 
-      - name: Post comment to PR
-        run: |
-          analysis=$(jq -r '.analysis' response.json)
-          echo "$analysis" > comment.md
-          gh pr comment "$PR_NUMBER" --body-file comment.md
-        env:
-          PR_NUMBER: ${{ github.event.pull_request.number }}
+      - name: Comment on PR
+        run: bash scripts/comment-pr.sh
 
