--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -16,12 +16,12 @@ steps:
   - name: Checkout repository
     uses: actions/checkout@v4
     with:
-      fetch-depth: 0  # Full history needed for diff
+      fetch-depth: 0
 
   - name: Set up Python
     uses: actions/setup-python@v5
     with:
-      python-version: 3.10
+      python-version: "3.10"
 
   - name: Install jq
     run: sudo apt-get install -y jq
