fix: corrected Python version to 3.10

--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history needed for diff
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
