--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -13,37 +13,38 @@ jobs:
       NGROK_URL: ${{ secrets.NGROK_URL }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # needed for full diff
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.13
+          python-version: '3.10'
 
       - name: Install jq
-        run: sudo apt-get install -y jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Generate PR Diff
+      - name: Generate PR diff
         run: |
           git fetch origin ${{ github.base_ref }}
           git diff origin/${{ github.base_ref }}...HEAD > pr.diff
 
-      - name: Send Diff to Flask API via ngrok
+      - name: Send diff to Flask API via ngrok
         run: |
           curl -X POST "$NGROK_URL/analyze" \
             -H "Content-Type: application/json" \
-            -d "{\"diff\": \"$(cat pr.diff | sed 's/\"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
+            -d "{\"diff\": \"$(cat pr.diff | sed 's/\"/\\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
             -o response.json
+          cat response.json
 
-      - name: Extract analysis from response
+      - name: Extract AI analysis from response
         run: |
-          analysis=$(jq -r '.analysis' response.json)
+          analysis=$(jq -r '.message' response.json)
           echo "$analysis" > comment.md
 
-      - name: Comment on Pull Request
+      - name: Comment on PR
         run: |
           gh pr comment ${{ github.event.pull_request.number }} --body-file comment.md
 
