--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   analyze:
-    name: Analyze PR with Ollama
     runs-on: ubuntu-latest
 
     env:
@@ -17,33 +16,40 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Required for full diff history
+          fetch-depth: 0  # Required to compute full diff
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
+        run: sudo apt-get install -y jq
 
       - name: Generate PR Diff
         run: |
           git fetch origin ${{ github.base_ref }}
           git diff origin/${{ github.base_ref }}...HEAD > pr.diff
 
-      - name: Send diff to Flask API via ngrok
+      - name: Send Diff to Flask API via ngrok
         run: |
           curl -X POST "$NGROK_URL/analyze" \
             -H "Content-Type: application/json" \
-            -d "{\"diff\": \"$(cat pr.diff | sed 's/\"/\\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
+            -d "{\"diff\": \"$(cat pr.diff | sed 's/\"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
             -o response.json
-          echo "Raw response from API:"
-          cat response.json
 
       - name: Extract AI analysis from response
         run: |
-          analysis=$(jq -r '.message' response.json)
+          if [ ! -s response.json ]; then
+            echo "response.json is empty. Skipping comment."
+            exit 0
+          fi
+          if ! jq empty response.json 2>/dev/null; then
+            echo "Invalid JSON in response.json. Skipping comment."
+            cat response.json
+            exit 0
+          fi
+          analysis=$(jq -r '.message // .analysis // "No analysis found."' response.json)
           echo "$analysis" > comment.md
 
       - name: Comment on Pull Request
