--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -21,43 +21,35 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: 3.10
 
-      - name: Install jq
-        run: sudo apt-get install -y jq
+      - name: Install tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq gh
 
-      - name: Generate PR Diff
+      - name: Generate PR diff
         run: |
           git fetch origin ${{ github.base_ref }}
           git diff origin/${{ github.base_ref }}...HEAD > pr.diff
 
-      - name: Send Diff to Flask API via ngrok
+      - name: Send diff to Flask API via ngrok
         run: |
           curl -X POST "$NGROK_URL/analyze" \
             -H "Content-Type: application/json" \
-            -d "{\"diff\": \"$(cat pr.diff | sed 's/\"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
+            -d "{\"diff\": \"$(cat pr.diff | sed 's/\"/\\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
             -o response.json
 
-      - name: Extract AI analysis from response
+      - name: Extract and save analysis
         run: |
-          if [ ! -s response.json ]; then
-            echo "response.json is empty. Skipping comment."
-            exit 0
-          fi
+          analysis=$(jq -r '.analysis' response.json)
+          echo "$analysis" > comment.md
+          cat comment.md  # Optional: Debug
 
-          if ! jq empty response.json 2>/dev/null; then
-            echo "Invalid JSON in response.json:"
-            cat response.json
-            exit 0
-          fi
-
-          jq -r '.message // .analysis // "No analysis found."' response.json > comment.md
+      - name: Authenticate gh CLI
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
       - name: Comment on Pull Request
         run: |
-          if [ -f comment.md ]; then
-            gh pr comment ${{ github.event.pull_request.number }} --body-file comment.md
-          else
-            echo "comment.md not found. Skipping PR comment."
-          fi
+          gh pr comment ${{ github.event.pull_request.number }} --body-file comment.md
 
