--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Full history needed for diff
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -28,23 +28,22 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq gh
 
-      - name: Generate PR diff
+      - name: Generate PR Diff
         run: |
           git fetch origin ${{ github.base_ref }}
           git diff origin/${{ github.base_ref }}...HEAD > pr.diff
 
-      - name: Send diff to Flask API via ngrok
+      - name: Send Diff to Flask API via ngrok
         run: |
           curl -X POST "$NGROK_URL/analyze" \
             -H "Content-Type: application/json" \
             -d "{\"diff\": \"$(cat pr.diff | sed 's/\"/\\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
             -o response.json
 
-      - name: Extract and save analysis
+      - name: Extract analysis from response
         run: |
           analysis=$(jq -r '.analysis' response.json)
           echo "$analysis" > comment.md
-          cat comment.md  # Optional: Debug
 
       - name: Authenticate gh CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
