test: trigger with AI and cost debug

--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -2,7 +2,7 @@ name: Analyze PR with Ollama
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, synchronize, reopened]
 
 jobs:
   analyze:
@@ -11,60 +11,55 @@ jobs:
     steps:
       - name: 🧾 Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Needed for full diff
 
-      - name: 🛠 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: 📦 Install dependencies
+      - name: 🔍 Extract PR diff
         run: |
-          pip install -r requirements.txt || true
-          sudo apt update && sudo apt install -y jq
+          gh pr diff ${{ github.event.pull_request.number }} > pr.diff
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 📤 Generate PR Diff
+      - name: 📄 Read infra file (e.g. infra/main.tf)
         run: |
-          git fetch origin
-          git diff origin/${{ github.event.pull_request.base.ref }}...origin/${{ github.event.pull_request.head.ref }} > pr.diff
+          cat infra/main.tf > infra_content.txt || echo "No infra file found" > infra_content.txt
 
-      - name: 📄 Extract infra.yaml content
+      - name: 🔧 Install dependencies
         run: |
-          if [ -f infra.yaml ]; then
-            cp infra.yaml infra.yaml.temp
-          else
-            echo "" > infra.yaml.temp
-          fi
+          sudo apt-get update
+          sudo apt-get install -y jq curl
 
-      - name: 🤖 Send PR Diff to Ollama API
+      - name: 🤖 Call AI API for Code Review
         run: |
-          ESCAPED_DIFF=$(sed ':a;N;$!ba;s/"/\\"/g;s/\n/\\n/g' pr.diff)
           curl -s -X POST "${{ secrets.NGROK_URL }}/analyze" \
             -H "Content-Type: application/json" \
-            -d "{\"diff\": \"$ESCAPED_DIFF\"}" \
-            > diff_response.json
+            -d "$(jq -Rs '{diff: .}' pr.diff)" \
+            -o diff_response.json || echo '{"analysis":"⚠️ Failed to get AI response"}' > diff_response.json
 
-      - name: 🤖 Send Infra.yaml to Ollama API
+      - name: 💰 Call AI API for Infra Cost Estimation
         run: |
-          ESCAPED_INFRA=$(sed ':a;N;$!ba;s/"/\\"/g;s/\n/\\n/g' infra.yaml.temp)
-          curl -s -X POST "${{ secrets.NGROK_URL }}/analyze" \
+          curl -s -X POST "${{ secrets.NGROK_URL }}/estimate" \
             -H "Content-Type: application/json" \
-            -d "{\"infra\": \"$ESCAPED_INFRA\"}" \
-            > infra_response.json
+            -d "$(jq -Rs '{infra: .}' infra_content.txt)" \
+            -o infra_response.json || echo '{"analysis":"⚠️ Failed to get cost estimation"}' > infra_response.json
 
-      - name: 💬 Create Markdown Comment
+      - name: 🐛 Debug: Show AI response
         run: |
-          AI_ANALYSIS=$(jq -r '.analysis' diff_response.json 2>/dev/null || echo "⚠️ Failed to get AI response")
-          COST_ESTIMATION=$(jq -r '.analysis' infra_response.json 2>/dev/null || echo "⚠️ Failed to get cost estimation")
+          echo "===== DIFF ANALYSIS ====="
+          cat diff_response.json
+          echo "===== COST ESTIMATION ====="
+          cat infra_response.json
 
-          echo "### 🤖 **AI Code Review Suggestion:**" > comment.md
+      - name: 📝 Create comment markdown
+        run: |
+          AI_ANALYSIS=$(jq -r '.analysis' diff_response.json)
+          COST_ESTIMATION=$(jq -r '.analysis' infra_response.json)
+
+          echo "### 🤖 AI Code Review Suggestion:" > comment.md
           echo "$AI_ANALYSIS" >> comment.md
           echo "" >> comment.md
-          echo "### 💰 **Estimated Infra Cost Impact:**" >> comment.md
+          echo "### 💰 Estimated Infra Cost Impact:" >> comment.md
           echo "$COST_ESTIMATION" >> comment.md
 
-      - name: 💬 Post AI Comment on PR
+      - name: 💬 Post comment on PR
         run: |
           gh pr comment ${{ github.event.pull_request.number }} --body-file comment.md
         env:
