--- a/.github/workflows/analyze-pr.yaml
+++ b/.github/workflows/analyze-pr.yaml
@@ -18,7 +18,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 📄 Read infra file (e.g. infra/main.tf)
+      - name: 📄 Read infra file
         run: |
           cat infra/main.tf > infra_content.txt || echo "No infra file found" > infra_content.txt
 
@@ -32,14 +32,14 @@ jobs:
           curl -s -X POST "${{ secrets.NGROK_URL }}/analyze" \
             -H "Content-Type: application/json" \
             -d "$(jq -Rs '{diff: .}' pr.diff)" \
-            -o diff_response.json || echo '{"analysis":"⚠️ Failed to get AI response"}' > diff_response.json
+            -o diff_response.json || echo '{"analysis":"[!] Failed to get AI response"}' > diff_response.json
 
       - name: 💰 Call AI API for Infra Cost Estimation
         run: |
           curl -s -X POST "${{ secrets.NGROK_URL }}/estimate" \
             -H "Content-Type: application/json" \
             -d "$(jq -Rs '{infra: .}' infra_content.txt)" \
-            -o infra_response.json || echo '{"analysis":"⚠️ Failed to get cost estimation"}' > infra_response.json
+            -o infra_response.json || echo '{"analysis":"[!] Failed to get cost estimation"}' > infra_response.json
 
       - name: 🐛 Debug: Show AI response
         run: |
